# led-whisper

./: .gitignore  Cargo.toml
src/: audio.rs  main.rs  openai.rs  transcription.rs
