[package]
name = "led-whisper"
version = "0.1.0"
edition = "2021"
authors = ["Greg Pstrucha"]
description = "A simple server that can control LED light setting based on voice commands"


[dependencies]
anyhow = "1.0.78"
axum = "0.7.3"
cpal = "0.15.2"
hound = "3.5.1"
mime_guess = "2.0.4"
openai_dive = "0.3.7"
openssl-sys = { version = "*", features = ["vendored"] }
reqwest = "0.11.23"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = "0.5.0"
